--- a/dicoding-proyek-awal/src/styles/style.css
+++ b/dicoding-proyek-awal/src/styles/style.css
@@ -19,18 +19,76 @@ body {
     gap: 25px;
 }
 
-/* .form-container {
-    padding: 5%;
-    display: grid;
-    justify-content: center;
+.form-container {
+    height: fit-content;
+    display: block;
+    position: sticky;
+    top: 5%;
 }
 
 form {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+    padding: 10% 10%;
+    display: grid;
+    align-items: center;
+    box-shadow: 1px 34px 95px -25px rgba(255,255,255,0.09) inset;
+    gap: 8px;
+    background: rgba(22,22,22,0.5);
+    border-top: 2px solid rgb(50, 118, 196);
+    border-radius: 15px;
 }
 
 form input {
+    width: 100%;
+    padding: 5% 0;
+    background: rgba(0, 0, 0, 0);
+    color: white;
     border: 0;
-} */
+    border-bottom: 2px solid rgb(50, 118, 196);
+    font-size: 1em;
+}
+
+.form-title, .form-body {
+    width: 100%;
+    margin: 0;
+}
+
+.form-body {
+    margin-bottom: 25px;
+}
+
+button {
+    margin: 0 auto;
+    width: 70%;
+    padding: 5%;
+    border: 0;
+    border-radius: 15px;
+    background: rgba(0, 0, 0, 0.2);
+    color: white;
+    border: 1px solid rgb(50, 118, 196);
+    transition: 0.1s ease-in-out;
+}
+
+button:hover {
+    transform: scale(1.1);
+    box-shadow: 0px 5px 46px -25px rgba(50,118,196,0.8) inset;
+}
+
+.validation-message {
+    color: red;
+    margin: 10px 0;
+    font-size: .8em;
+}
+
+/* RESPONSIVE SECTION */
+
+@media only screen and (max-width: 720px) {
+    .container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .form-container {
+        margin-top: 10%;
+        position: relative;
+    }
+}
